# geogif

./: .gitignore  README.md  pyproject.toml
geogif/: gif.py
tests/: strategies.py  test_gif.py  util.py
